还原一个错误修改